# sillybot

./: .dockerignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  RELEASING.md  admin.md  build.rs  patch-notes.md  skills-lock.json
.github/workflows/: ci.yml  release.yml
deploy/: .env.example  Containerfile  README.md  compose.yaml
deploy/systemd/: README.md  sillybot.container
docs/adr/: 0001-use-turso-database-with-snapshot-backups.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
migrations/: 0001_counter.sql  0002_admin_log_channel.sql  0003_patch_notes_channel.sql  0004_self_role_menus.sql  0005_self_role_options.sql
scripts/: release.sh
src/: bot.rs  main.rs
src/commands/: count.rs  info.rs  mod.rs  patch_notes.rs  ping.rs  self_roles.rs  synchronization.rs
src/commands/admin/: ban.rs  duration.rs  kick.rs  log_channel.rs  mod.rs  timeout.rs
src/db/: admin_log.rs  counter.rs  mod.rs
