[package]
name = "sillybot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
poise = "0.6.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
turso = "=0.6.1"

[dev-dependencies]
tempfile = "3"
