[package]
name = "sillybot"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
poise = "0.6.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
sysinfo = "0.39.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
turso = "=0.6.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
